--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "public/electron.js",
   "homepage": "https://bcartfall.github.io/nightplayer",
   "dependencies": {
+    "dexie": "^3.2.3",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
     "firebase": "^9.19.1",
-    "idb": "^7.1.1",
     "react-player": "^2.12.0",
     "uuid": "^9.0.0"
   },
